Use original manifesto + PDF, update X handle, add CNAME

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="cta">
         <p class="muted"><span class="label">Contact:</span> <a href="mailto:harsh@clockworks-compute.com">harsh@clockworks-compute.com</a></p>
-        <p class="muted"><span class="label">DM:</span> <a href="https://x.com/">x.com/&lt;yourhandle&gt;</a></p>
+        <p class="muted"><span class="label">DM:</span> <a href="https://x.com/hargup13">x.com/hargup13</a></p>
       </div>
     </main>
   </body>
