--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -3,93 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Clockworks Manifesto</title>
-    <meta name="description" content="Clockworks Manifesto" />
+    <title>Clockworks Manifesto (PDF)</title>
+    <meta name="description" content="Clockworks Manifesto PDF" />
+    <meta http-equiv="refresh" content="0; url=/manifesto/clockworks_manifesto.pdf" />
+    <link rel="canonical" href="/manifesto/clockworks_manifesto.pdf" />
     <style>
-      :root { color-scheme: light; }
       body {
-        margin: 0;
-        padding: 48px 22px;
         font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-        line-height: 1.6;
+        padding: 40px 22px;
         color: #0b1220;
-        background: #ffffff;
       }
-      main { max-width: 820px; margin: 0 auto; }
-      h1 { font-size: 20px; margin: 0 0 8px 0; }
-      p { margin: 0 0 14px 0; font-size: 16px; }
       a { color: #0b5fff; text-decoration: none; }
       a:hover { text-decoration: underline; }
-      .muted { color: #3a475a; }
-      .back { margin-bottom: 22px; }
-      .label { font-weight: 700; }
-      pre.manifesto {
-        margin: 18px 0 0 0;
-        padding: 18px;
-        background: rgba(26, 54, 93, 0.04);
-        border: 1px solid rgba(26, 54, 93, 0.18);
-        border-radius: 10px;
-        overflow-x: auto;
-        white-space: pre-wrap;
-        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-        font-size: 13px;
-        line-height: 1.55;
-      }
     </style>
   </head>
   <body>
-    <main>
-      <div class="back"><a href="/">← Home</a></div>
-
-      <h1>Clockworks Manifesto!</h1>
-      <p class="muted">Original draft (Dec 2025). PDF: <a href="/manifesto/clockworks_manifesto.pdf">download</a></p>
-
-      <pre class="manifesto">1st Dec 2025
-Today, programming GPU sucks! First your code just doesn’t run. Then it stalls
-and deadlocks. Then you accidentally access invalid memory, boom error again.
-When you finally get it working, efficiency is like 10%. Then you study a lot,
-learn about cache hierarchies, and bank conflicts and the number of tensor cores
-your GPU has.
-You work a lot, find all the right launch parameters, fuse all the kernels, figure
-out the right memory layout and access patterns, put everything together, fix
-all the bugs! Finally 70% efficiency!
-At this point instead of pushing efficiency up further to 90%, you think it would
-be better to add more GPUs. So you rent a server with 8 GPUs instead of 1.
-More compute, great! Not so soon, you run your original code, and turns out
-you are getting only 15% of the available compute!
-So you learn about inter GPU communication, remote atomics so put everything
-together, and looks like you have got it. And indeed you have, for that specific
-GPU, for that specific configuration, for that specific algorithm.
-Different configuration, different algorithm, different GPU, you have to do it all
-over again!
-That’s why we are building Clockworks!
-Clockworks aim to create the perfect GPU software by the power of
-AI , perfect GPU software which:
-
-- Doesn’t error out or deadlocks (for single GPU, multi-GPU or multi-node
-    clusters)
-- Is algorithmically and numerically correct
-- AND the code runs as close to the theoretical max performance as possible
-**Clockworks do this by:**
-- Going as close to the metal as possible, to remove all the abstraction
-overhead
-- Accurately modeling the hardware; FLOPS, caches, memory bandwidth,
-network latency, everything, layout & configuration in every way
-- And simulating correctness and performance at compile time instead of
-runtime so that you know about the correctness & performance of your
-code before you even touch the hardware!
-This is GPU code equivalent of testing your rockets in simulation before launching.
-Because GPUs can be as (actually more!) expensive than rockets!
--
-
-
-Harsh Gupta
-hargup.in</pre>
-
-      <p class="muted" style="margin-top: 18px;">
-        Contact: <a href="mailto:harsh@clockworks-compute.com">harsh@clockworks-compute.com</a>
-        · DM: <a href="https://x.com/hargup13">x.com/hargup13</a>
-      </p>
-    </main>
+    <p>Opening the PDF…</p>
+    <p>If it doesn’t open, <a href="/manifesto/clockworks_manifesto.pdf">click here</a>.</p>
   </body>
 </html>
