Point manifesto link to PDF

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <p>
         <span class="label">Manifesto →</span>
-        <a href="/manifesto/">clockworks-compute.com/manifesto</a>
+        <a href="/manifesto/clockworks_manifesto.pdf">clockworks-compute.com/manifesto</a>
       </p>
 
       <div class="cta">
