Update manifesto link label

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="spacer"></div>
 
       <p>
-        <span class="label">Manifesto →</span>
+        <span class="label">Read the manifesto →</span>
         <a href="/manifesto/clockworks_manifesto.pdf">clockworks-compute.com/manifesto</a>
       </p>
 
